--- a/src/main/resources/templates/customer/join.html
+++ b/src/main/resources/templates/customer/join.html
@@ -30,12 +30,14 @@
     <input type="tel" id="phone" name="cusPhone" placeholder="휴대폰 번호"><br>
 
     <label for="birthdate">생년월일:</label><br>
-    <input type="date" id="birthdate" name="cusBirth"><br>
+    <input type="date" id="birthdate" name="cusBirthday"><br>
+
 
     <label for="nickname">닉네임:</label><br>
     <input type="text" id="nickname" name="cusNick" placeholder="닉네임"><br>
 
     <input type="submit" value="가입하기">
+
 </form>
 </body>
 </html>
