--- a/src/main/resources/templates/ceo/join.html
+++ b/src/main/resources/templates/ceo/join.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h2>회원가입</h2>
-<form action="/customer/login" method="post">
+<form action="/ceo/login" method="post">
     <label for="name">이름:</label><br>
     <input type="text" id="name" name="ceoName" placeholder="이름"><br>
 
